video/ome/api-route/httproute-exporter.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-exporter
spec:
  hostnames:
  - ome-streams.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: api-exporter
      port: 80
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Access-Control-Allow-Origin
          value: '*'
