video/ome/api-route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  hostnames:
  - ome-api.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-private
    sectionName: https-main
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: api
      port: 80
